# aider-vertex

./: .aider.conf.yml  .aiderignore  .envrc  .gitignore  CONVENTIONS.md  README.md  TODO.md  ci-loop.sh  dev  devbox.json  flake.nix  flake.nix.bak  overrides.nix  pyproject.toml  test.sh  update-deps.sh  verify_arch.sh
.github/workflows/: check.yml  release.yml
aider_vertex/: doctor.py  main.py  tutorial.py
overrides/: darwin.nix  linux.nix
tests/: run_all.sh
tests/integration/: test_architecture.sh
tests/unit/: test_docker_rewrite.sh  test_header_weaving.sh  test_naming_normalization.sh
